# warpscan

./: .gitignore  Cargo.toml  LICENSE  README.md  code-example.md
.figma/2_2/: index.jsx  index.module.scss
.github/workflows/: ci.yml  release.yml
.trae/documents/: warpscan_implementation_todo.md  warpscan_prd.md  warpscan_technical_architecture.md
benches/: main_benchmark.rs
foundry-test/: DEPLOYMENT_INFO.md  README.md  foundry.toml
foundry-test/cache/: solidity-files-cache.json
foundry-test/script/: CallSimpleStorage.s.sol  DeploySimpleStorage.s.sol
foundry-test/scripts/: call_contract.sh
foundry-test/src/: SimpleStorage.sol
scripts/: anvil-mainnet-fork.sh
src/: blockchain.rs  cache.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  wallet.rs
src/blockchain/: etherscan.rs  mod.rs  service.rs  subscriptions.rs  types.rs
src/cache/: manager.rs  mod.rs  types.rs
src/config/: manager.rs  mod.rs  node_detection.rs  types.rs
src/error/: helpers.rs  mod.rs  types.rs
src/logging/: macros.rs  mod.rs  perf.rs  setup.rs  utils.rs
src/models/: mod.rs  multisig.rs  wallet_info.rs  wallet_stats.rs
src/ui/: app.rs  components.rs  events.rs  mod.rs  models.rs  screens.rs  theme.rs
src/ui/app/: address.rs  core.rs  data.rs  events.rs  input.rs  mod.rs  mouse.rs  navigation.rs  state.rs  subscriptions.rs  ui_state.rs  validation.rs
src/ui/components/: error.rs  help_popup.rs  input_field.rs  loading.rs  mod.rs  progress.rs  status_bar.rs  success.rs
src/ui/events/: handler.rs  mod.rs  types.rs  utils.rs
src/ui/models/: address.rs  mod.rs  (+8 more)
(+23 files in other folders)
